Added basic bid function

--- a/website/index.html
+++ b/website/index.html
@@ -27,6 +27,7 @@
         <button>Take</button>
         <button>Sell</button>
         <button>Buy</button>
+        <input type="number">
     </aside>
 </body>
 <script src="script.js"></script>
